; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/pmu/extr_bhnd_pmu_subr.c_bhnd_pmu_is_otp_powered.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/pmu/extr_bhnd_pmu_subr.c_bhnd_pmu_is_otp_powered.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhnd_pmu_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@RES4329_OTP_PU = common dso_local global i32 0, align 4
@RES4319_OTP_PU = common dso_local global i32 0, align 4
@RES4336_OTP_PU = common dso_local global i32 0, align 4
@RES4330_OTP_PU = common dso_local global i32 0, align 4
@BHND_PMU_RES_STATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bhnd_pmu_is_otp_powered(%struct.bhnd_pmu_softc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bhnd_pmu_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.bhnd_pmu_softc* %0, %struct.bhnd_pmu_softc** %3, align 8
  %5 = load %struct.bhnd_pmu_softc*, %struct.bhnd_pmu_softc** %3, align 8
  %6 = getelementptr inbounds %struct.bhnd_pmu_softc, %struct.bhnd_pmu_softc* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %22 [
    i32 131, label %9
    i32 137, label %12
    i32 129, label %15
    i32 130, label %18
    i32 136, label %21
    i32 135, label %21
    i32 128, label %21
    i32 133, label %21
    i32 134, label %21
    i32 132, label %21
  ]

9:                                                ; preds = %1
  %10 = load i32, i32* @RES4329_OTP_PU, align 4
  %11 = call i32 @PMURES_BIT(i32 %10)
  store i32 %11, i32* %4, align 4
  br label %23

12:                                               ; preds = %1
  %13 = load i32, i32* @RES4319_OTP_PU, align 4
  %14 = call i32 @PMURES_BIT(i32 %13)
  store i32 %14, i32* %4, align 4
  br label %23

15:                                               ; preds = %1
  %16 = load i32, i32* @RES4336_OTP_PU, align 4
  %17 = call i32 @PMURES_BIT(i32 %16)
  store i32 %17, i32* %4, align 4
  br label %23

18:                                               ; preds = %1
  %19 = load i32, i32* @RES4330_OTP_PU, align 4
  %20 = call i32 @PMURES_BIT(i32 %19)
  store i32 %20, i32* %4, align 4
  br label %23

21:                                               ; preds = %1, %1, %1, %1, %1, %1
  store i32 1, i32* %2, align 4
  br label %32

22:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %32

23:                                               ; preds = %18, %15, %12, %9
  %24 = load %struct.bhnd_pmu_softc*, %struct.bhnd_pmu_softc** %3, align 8
  %25 = load i32, i32* @BHND_PMU_RES_STATE, align 4
  %26 = call i32 @BHND_PMU_READ_4(%struct.bhnd_pmu_softc* %24, i32 %25)
  %27 = load i32, i32* %4, align 4
  %28 = and i32 %26, %27
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %23
  store i32 0, i32* %2, align 4
  br label %32

31:                                               ; preds = %23
  store i32 1, i32* %2, align 4
  br label %32

32:                                               ; preds = %31, %30, %22, %21
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @PMURES_BIT(i32) #1

declare dso_local i32 @BHND_PMU_READ_4(%struct.bhnd_pmu_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
